# gotrue-py

./: .editorconfig  pyproject.toml
