[tool.poetry]
name = "gotrue"
version = "0.0.0"
description = "A Python client for the GoTrue API"
authors = [""]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.15.5"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.3"
pytest = "^6.1.0"
black = "^20.8b1"
isort = "^5.5.4"

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = 'black'
line_length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
